# quickstatements_client

./: .bumpversion.cfg  .cruft.json  .gitignore  CITATION.cff  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: tests.yml
docs/source/: cli.rst  conf.py  index.rst  installation.rst  usage.rst
src/quickstatements_client/: __init__.py  __main__.py  cli.py  client.py  constants.py  iso639.py  model.py  version.py
src/quickstatements_client/language_codes/: __init__.py  data.json
src/quickstatements_client/maintenance/: __init__.py  annotate_missing_followed_by.py  annotate_missing_follows.py
src/quickstatements_client/sources/: __init__.py  licenses.json  orcid.py  pypi.py  utils.py
tests/: __init__.py  test_client.py  test_models.py  test_orcid.py  test_wikidata.py
