##########################
# Setup.py Configuration #
##########################
[metadata]
name = quickstatements_client
version = 0.1.1-dev
description = A data model and client for Wikidata QuickStatements
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/cthoyt/quickstatements_client
download_url = https://github.com/cthoyt/quickstatements_client/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/quickstatements_client/issues
    Source Code = https://github.com/cthoyt/quickstatements_client

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
keywords =
    snekpack
    cookiecutter
    wikidata
    quickstatements
    pydantic

[options]
install_requires =
    click
    pydantic>=2.0
    pystow
    typing_extensions

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.9

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx<8.0
    sphinx-rtd-theme
    sphinx-click
    sphinx_automodapi


[options.entry_points]
console_scripts =
    quickstatements_client = quickstatements_client.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = quickstatements_client
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/quickstatements_client
    .tox/*/lib/python*/site-packages/quickstatements_client

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    # pickle
    S301
    S403
    S404
    S603
    # Line break before binary operator (flake8 is wrong)
    W503
    # whitespace before ':'
    E203
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    quickstatements_client
    tests
